PSP/borradores/ae/jwt/MUNDIALREST/src/main/java/org/example/mundialrest/common/errors/PlayerNotFoundException.java
package org.example.mundialrest.common.errors;

public class PlayerNotFoundException extends RuntimeException {
    public PlayerNotFoundException(String message) {
        super(message);
    }
}

